RESOLVED FIXED 164459
WebAssembly: Silence noisy warning
https://bugs.webkit.org/show_bug.cgi?id=164459
Summary WebAssembly: Silence noisy warning
JF Bastien
Reported 2016-11-05 19:06:43 PDT
wasm tests say "Parsing module failed" when purposefully testing for failure. Remove the verbosity.
Attachments
patch (1.58 KB, patch)
2016-11-05 19:08 PDT, JF Bastien
ysuzuki: review+
patch (1.58 KB, patch)
2016-11-09 10:12 PST, JF Bastien
no flags
JF Bastien
Comment 1 2016-11-05 19:08:51 PDT
Created attachment 294013 [details] patch Not CQ for now since tree is closed.
Yusuke Suzuki
Comment 2 2016-11-05 22:30:59 PDT
Comment on attachment 294013 [details] patch r=me
JF Bastien
Comment 3 2016-11-09 10:12:34 PST
Created attachment 294234 [details] patch Rebase to ToT.
WebKit Commit Bot
Comment 4 2016-11-09 10:56:47 PST
The commit-queue encountered the following flaky tests while processing attachment 294234 [details]: inspector/sampling-profiler/call-frame-with-dom-functions.html bug 164388 (author: sbarati@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2016-11-09 10:57:21 PST
The commit-queue encountered the following flaky tests while processing attachment 294234 [details]: transitions/default-timing-function.html bug 138901 (author: simon.fraser@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2016-11-09 12:16:15 PST
Comment on attachment 294234 [details] patch Clearing flags on attachment: 294234 Committed r208463: <http://trac.webkit.org/changeset/208463>
WebKit Commit Bot
Comment 7 2016-11-09 12:16:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.