WebAssembly: Silence noisy warning https://bugs.webkit.org/show_bug.cgi?id=164459

Reviewed by Yusuke Suzuki.

* wasm/WasmPlan.cpp:
(JSC::Wasm::Plan::Plan):


Canonical link: https://commits.webkit.org/182194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208463 268f45cc-cd09-0410-ab3c-d52691b4dbfc